fix(responsiveness): Fix Modal on Small Screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1085,16 +1085,20 @@ img {
     gap: 1rem;
   }
 
-  .testimonial-img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: var(--mb-0-75);
+  .section-subtitle {
+    margin-top: var(--mb-0-25);
+    margin-bottom: var(--mb-1-5)
+  }
+  .testimonial-data,
+  .testimonial-header {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
-  .testimonial-name {
-    font-size: var(--small-font-size);
-    font-weight: var(--font-medium);
+  .testimonial-img {
+    margin-right: 0;
+    margin-bottom: var(--mb-0-25);
   }
 
   .contact-content {
@@ -1136,5 +1140,13 @@ img {
     width: 30%;
     justify-content: center;
     align-items: center;
+  }
+
+  .services-modal-content {
+    padding: 3.5rem;
+  }
+
+  .services-modal {
+    padding: 0.5rem;
   }
 }
